# subscription_data_pipeline

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
config/: airflow.cfg
generator/: Dockerfile  main.py
handles/airflow/: create_connection.py  main.py
handles/clickhouse/: execute_custom_query.py  main.py
init-db/: init.sql
