[tool.poetry]
name = "subscription-data-pipeline"
version = "0.1.0"
description = "End-to-end DE project: FastAPI Generator -> Postgres (CDC) -> Airflow -> ClickHouse"
authors = [" "]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
# API & Generator
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
Faker = "33.1.0"
# Databases
sqlalchemy = "1.4.54"
psycopg2-binary = "2.9.10" # Бинарная сборка проще для Docker
# Orchestration
apache-airflow = "2.10.4"
airflow-clickhouse-plugin = "1.6.0"
apache-airflow-providers-postgres = "5.14.0"
# Data Processing
pandas = "2.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "0.8.0"
isort = "^5.13.0"
mypy = "^1.13.0"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
src_paths = ["generator", "dags"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

